- implement pub sub - add flyway and migrate schema - connect postresql database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-#Sun Mar 10 08:19:43 UTC 2024
 micronaut.application.name=websocketsync
+datasources.default.url=jdbc:postgresql://localhost:5432/db
+datasources.default.driverClassName: org.postgresql.Driver
+datasources.default.username: micronaut
+datasources.default.password: secretpassword
+datasources.default.dialect: POSTGRES
+
+flyway.datasources.default.enabled=true
